...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:backgroundTint="@color/white">

                <CheckBox
                    android:id="@+id/upVote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/upvote"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/upVoteCount"
                    android:textColor="#696069"
                    android:text="3" />

                <CheckBox
                    android:id="@+id/downVote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/downvote"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/downVoteCount"
                    android:textColor="#696069"
                    android:text="3" />


                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/reportCommentButton"
...
