...
            android:layout_marginTop="424dp"
            android:orientation="vertical">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/home_review_button"
                    style="@style/home_button_browse_theme"
                    android:layout_width="165dp"
                    android:layout_height="90dp"
                    android:text="Browse"
                    android:textColor="@color/home_secondary_text_color"
                    android:elevation="5dp"
                    android:backgroundTint="@color/home_button_background"
                    android:gravity="center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
                <Button
                    android:id="@+id/home_add_facility_button"
                    style="@style/home_button_add_theme"
                    android:layout_width="165dp"
                    android:layout_height="90dp"
                    android:text="Add Facility"
                    android:textColor="@color/home_secondary_text_color"
                    android:elevation="5dp"
...
