...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    android:background="@color/facility_background_color"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".FacilityActivity"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:id="@+id/facilityActivityView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

...
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:textColor="@color/facility_primary_text_color"
                android:textSize="28dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/rate_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/button_rate"
                android:textColor="@color/white" />
        </LinearLayout>
...
                android:layout_marginBottom="5dp"
                android:textColor="@color/facility_primary_text_color"
                android:textSize="20dp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/facilityRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/facilityReport"
            android:orientation="vertical"
            android:background="@color/facility_background_color">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/report_facility_button"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:backgroundTint="#ccb90e0a"
                android:text="Report This Facility"
                android:textColor="@color/white" />
...
