<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_browse"
            android:icon="@drawable/ic_baseline_reviews_24"
            android:title="@string/menu_browse"/>

        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_report_facility"
            android:title="@string/menu_report"/>

        <item
            android:id="@+id/nav_add_facility"
            android:icon="@drawable/ic_baseline_add_24"
            android:title="@string/menu_add_facility"/>

        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_baseline_android_24"
            android:title="@string/menu_chat" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_settings"/>


    </group>
</menu>